# xcfun

./: .appveyor.yml  .azure-pipelines.yml  .clang-format  .gitattributes  .gitignore  .mailmap  .pre-commit-config.yaml  .readthedocs.yml  .travis.yml  .zenodo.json  AUTHORS.md  CHANGELOG.md  CMakeLists.txt  COPYING.LESSER.md  COPYING.XCFUN  CTestConfig.cmake  CTestCustom.cmake.in  Doxyfile  INSTALL  Makefile  Makefile.aix  Makefile.common  Makefile.common_win  Makefile.gcc  Makefile.intel  Makefile.pgi  Makefile.vc  Pipfile  README  README.md  appveyor.yml  codecov.yml  config.h.in  environment.yml  requirements.txt  setup
.ci/: cmake.sh  example.sh  macos.yml  pybind11.sh  windows.yml
.githooks/: LICENSE-C++  LICENSE-Fortran  LICENSE-Python  LICENSE-hash  canonicalize_filename.sh  license_maintainer.py  pre-commit  pre-commit-clang-format  pre-commit-license-maintainer  pre-commit-yapf
.github/: CODEOWNERS  CONTRIBUTING.md  license-header  xcfun-codecov.yml  xcfun-gha.yml
.github/workflows/: build-test.yml  code-coverage.yml
RELICENSE/: AlexBorgoo.mb  AndreGomes.md  ChristophJacob.md  ElisaRebolini.md  JonasJuselius.md  MiroslavIlias.md  RadovanBast.md  RobertoDiRemigio.md  SarahReimann.md  SimenReine.md  UlfEkstrom.md  relicense-template-mplv2.txt
api/: CMakeLists.txt  xcfun.F90  xcfun.F90.in  xcfun.f90  xcfun.h
cmake/: CCompilers.cmake  CXXCompilers.cmake  ConfigCompilerFlags.cmake  ConfigDefaultCompilerFlags.cmake  FindXCFun.cmake  FortranCompilers.cmake  Tests.cmake  XCFunConfig.cmake.in  autocmake.yml  update.py
cmake/autocmake/: configure.py  generate.py  interpolate.py  parse_rst.py  parse_yaml.py
cmake/custom/: FindNumPy.cmake  api.cmake  code_coverage.cmake  examples.cmake  fc_optional.cmake  int64.cmake  omp.cmake  static_library.cmake  test.cmake  xcfun.cmake
cmake/custom/compilers/: CFlags.cmake  CXXFlags.cmake  FortranFlags.cmake  README.md  SetCompilerFlag.cmake
cmake/downloaded/: autocmake_custom_color_messages.cmake  autocmake_cxx.cmake  autocmake_fc_optional.cmake
conda-recipes/: conda_build_config.yaml
conda-recipes/xcfun/: build.sh  meta.yaml
doc/: Adding_Functionals.txt  Makefile  api.rst  conf.py  index.rst  publish.sh  xcfun_doc.html  xcfun_install.rst
doc/_templates/: layout.html
docs/: Doxyfile.in  api.rst  building.rst  conf.py  functionals.rst  index.rst  migration.rst  requirements.txt  using.rst  xcfun_install.rst
examples/: CMakeLists.txt  README.md  cpp_example.cpp
examples/CXX_host/: CMakeLists.txt  example.cpp
examples/C_host/: CMakeLists.txt  example.c  funeval.c
examples/Fortran_host/: CMakeLists.txt  example.f90
fortran/: CMakeLists.txt  example.F90  example.f90  kernel_example.F90  xc_fun_module.F90  xcfun_module.F90  xcfun_module.f90
include/: api.h  xc_fun.h  xcfun.h
lib/: .gitignore
python/: CMakeLists.txt  __init__.py  export_xcfun.cpp  init.py  setup.py  setup.py.in  swig_compile  xcfun.py  xcfun_swig.i
src/: CMakeLists.txt  XCFunctional.cpp  XCFunctional.hpp  array.h  config.h  config.hpp  densvars.h  densvars.hpp  dispatch.h  evaluators.cpp  evaluators.h  fortran.c  fortran.cpp  functional.cpp  functional.h  functional.hpp  genfortran.cpp  geninterface.cpp  misc.h  parameters.cpp  parameters.h  potential.cpp  registry.h  settings.cpp  settings.h  specmath.h  specmath.hpp  testing.h  vars_info.h  version_info.hpp  xc_fun.cpp  xcfun.cpp  xcfun_internal.h  xcint.cpp  xcint.h  xcint.hpp
src/functionals/: CMakeLists.txt  SCAN_like_eps.hpp  SCANc.cpp  SCANx.cpp  aliases.cpp  apbec.cpp  apbex.cpp  b97-1xc.cpp  b97-2xc.cpp  b97c.hpp  b97x.hpp  b97xc.cpp  b97xc.hpp  beckex.cpp  blocx.cpp  blyp_fun.h  brx.cpp  btk.cpp  common_parameters.cpp  constants.h  constants.hpp  cs.cpp  ktx.cpp  lb94.cpp  lda_fun.h  lda_sr.h  lda_sr.h.bak  ldaerfc.cpp  ldaerfc_jt.cpp  ldaerfx.cpp  list_of_functionals.cpp  list_of_functionals.hpp  list_of_parameters.h  lypc.cpp  m05_fun.h  m05c.cpp  m05x.cpp  m05x2c.cpp  m05x2x.cpp  m06_fun.h  (+77 more)
src/taylor/: README  ctaylor.h  ctaylor.hpp  ctaylor_math.h  ctaylor_math.hpp  micromath.h  micromath.hpp  polymul.h  polymul.hpp  taylor.h  taylor.hpp  taylor_math.h  taylor_math.hpp  tmath.h  tmath.hpp  unittest_taylor.cpp
test/: CMakeLists.txt  benchmark.cpp  br.cpp  cxx-wo-libstdcxx.cpp  example.c  example.cpp  funeval.c  funeval.cpp  funtest.cpp  kernel_example.f90  linktest.c  nr.cpp  plot-functional.py  test.py  test_xcfun.py  testall.c  testall.cpp
test/examples/: fortran_example.f90
tests/: CMakeLists.txt  example.c  testall.cpp
tests/examples/: fortran_example.f90
