configure_file(
  ${CMAKE_CURRENT_LIST_DIR}/xcfun.h
  ${PROJECT_BINARY_DIR}/${CMAKE_INSTALL_INCLUDEDIR}/${PROJECT_NAME}/xcfun.h
  COPYONLY
  )

install(
  FILES
    ${CMAKE_CURRENT_LIST_DIR}/xcfun.h
  DESTINATION
    ${CMAKE_INSTALL_INCLUDEDIR}/${PROJECT_NAME}
  )

configure_file(
  ${CMAKE_CURRENT_LIST_DIR}/xcfun.F90
  ${PROJECT_BINARY_DIR}/${CMAKE_INSTALL_INCLUDEDIR}/${PROJECT_NAME}/xcfun.F90
  COPYONLY
  )

install(
  FILES
    ${CMAKE_CURRENT_LIST_DIR}/xcfun.F90
  DESTINATION
    ${CMAKE_INSTALL_INCLUDEDIR}/${PROJECT_NAME}
  )
